--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TWITTER_API_KEY=QQn5UuSQCWGsK5R75iRsSgfRy
-TWITTER_API_SECRET=GZPnDxQ4YzJMYl2u9HjU0eO2q64uGVoKM8C3aPZaYZmQL51IA1
-TWITTER_ACCESS_TOKEN=1336555821304586240-ESaqUQy57V2BPWn6fLAWDDBcumeJpV
-TWITTER_ACCESS_SECRET=EHYi1NlcB2pXsJ5DIUUD7NYJrHXgQLm2NfGmirJN9A1hQ
+TWITTER_API_KEY=xx
+TWITTER_API_SECRET=xx
+TWITTER_ACCESS_TOKEN=xx
+TWITTER_ACCESS_SECRET=xx
 MONGO_URI=mongodb://localhost:27017
